# trender

./: .env.example  .env.local.example  .gitignore  LICENSE  README.md  cognitive-coverage-open.html  cognitive-coverage.html  cognitive-coverage.json  function_app.py  host.json  index.htmlsec.endpointdlp  learning-guide.html  local.settings.example.json  package-lock.json  package.json  plugin.json  pyproject.toml  requirements.txt
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
cognitive-coverage/: cognitive-coverage-open.html  cognitive-coverage.html  cognitive-coverage.json  learning-guide.html
rayfin/: rayfin.yml
skills/trender/: README.md  SKILL.md
skills/trender/scripts/: build-skill.ps1  build-skill.sh  install-skill.ps1  install-skill.sh  trender.py
src/pages/: HomePage.tsx
src/services/: MockAuthService.ts  RayfinAuthService.ts  rayfinClient.ts
trender/: __init__.py  analyzer.py  cli.py  config.py  crawler.py  discoverer.py  models.py  renderer.py  service.py  storage.py  timeframes.py  trends.py
trender.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
