[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trender"
version = "0.1.0"
description = "Agent-hosted trend signal extractor that generates interactive static HTML trend maps."
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.1.0",
    "azure-functions>=1.24.0",
    "beautifulsoup4>=4.12.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "openai>=1.30.0",
    "rich>=13.7.0",
]

[project.scripts]
trender = "trender.cli:main"

[tool.setuptools.packages.find]
include = ["trender*"]

